--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="keywords" content="construction, renovation, decoration, painting, building electricity, climatisation, refrigeration, ETS ENEOS BORLEINE SERVICES">
     <meta name="author" content="ETS ENEOS BORLEINE SERVICES">
     <title>ETS ENEOS BORLEINE SERVICES - Professional Construction and Renovation Services</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+<!-- Bootstrap JS (with Popper.js for dropdowns) -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../ETS ENEOS/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 </head>
@@ -57,17 +59,21 @@
 </nav>
 
 <!-- Hero Section -->
-<header class="hero d-flex align-items-center">
-    <video autoplay muted loop>
+<!-- Hero Section -->
+<header class="hero d-flex align-items-center position-relative">
+    <video autoplay muted loop class="video-bg">
         <source src="PICTURE/construction-eneos.mp4" type="video/mp4">
+        <source src="PICTURE/construction-eneos.webm" type="video/webm">
         Your browser does not support the video tag.
     </video>
+
     <div class="overlay"></div>
     <div class="content w-100 text-center">
         <h1 class="display-4">Professional Services for Your Needs</h1>
         <p class="lead">Building electricity, painting, building construction, refrigeration, and more.</p>
     </div>
 </header>
+
 
 <!-- Services Section -->
 <section id="services" class="py-5">
@@ -309,12 +315,20 @@
     </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- jQuery (Required for Bootstrap and Tooltips) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Popper.js (Required for Bootstrap's tooltips & dropdowns) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
+
+<!-- Bootstrap JS (Latest version) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Swiper.js (For Sliders) -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="../ETS ENEOS/js/index.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<!-- Your Custom JavaScript -->
+<script src="js/index.js"></script>
 
 </body>
 </html>
