Updated about.html with new changes

--- a/about.html
+++ b/about.html
@@ -163,19 +163,19 @@
                     <div class="carousel-item active">
                         <div class="testimonial text-center">
                             <p>"Excellent service! Highly recommend for their professionalism and quality work."</p>
-                            <h3>- John Doe</h3>
+                            <h3>- Arnold</h3>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonial text-center">
                             <p>"They did a fantastic job on our renovation. Very satisfied with the results."</p>
-                            <h3>- Jane Smith</h3>
+                            <h3>- george</h3>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonial text-center">
                             <p>"Reliable and efficient. Great experience working with them."</p>
-                            <h3>- Michael Brown</h3>
+                            <h3>- Chris</h3>
                         </div>
                     </div>
                 </div>
