Updated about.html with new changes for me

--- a/about.html
+++ b/about.html
@@ -137,17 +137,17 @@
             <div class="row text-center">
                 <div class="col-lg-4">
                     <img src="PICTURE/ARNOLD.jpg" alt="John Doe - CEO at ETS ENEOS BORELIN SERVICES" class="img-fluid rounded-circle mb-3 team-member-image">
-                    <h3>John Doe</h3>
+                    <h3>Arnold</h3>
                     <p>CEO</p>
                 </div>
                 <div class="col-lg-4">
                     <img src="PICTURE/member/w1.jpg" alt="Jane Smith - Project Manager at ETS ENEOS BORELIN SERVICES" class="img-fluid rounded-circle mb-3 team-member-image">
-                    <h3>Jane Smith</h3>
+                    <h3>Joseph</h3>
                     <p>Project Manager</p>
                 </div>
                 <div class="col-lg-4">
                     <img src="PICTURE/member/w2.jpg" alt="Michael Brown - Lead Engineer at ETS ENEOS BORELIN SERVICES" class="img-fluid rounded-circle mb-3 team-member-image">
-                    <h3>Michael Brown</h3>
+                    <h3>Sam</h3>
                     <p>Lead Engineer</p>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <div class="carousel-item active">
                         <div class="testimonial text-center">
                             <p>"Excellent service! Highly recommend for their professionalism and quality work."</p>
-                            <h3>- Arnold</h3>
+                            <h3>- lewis</h3>
                         </div>
                     </div>
                     <div class="carousel-item">
