Updated about.html with new changes

--- a/about.html
+++ b/about.html
@@ -129,30 +129,35 @@
             </div>
         </div>
     </section>
-
-    <!-- Our Team Section -->
-    <section class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center section-title">Meet Our Team</h2>
-            <div class="row text-center">
-                <div class="col-lg-4">
-                    <img src="PICTURE/ARNOLD.jpg" alt="John Doe - CEO at ETS ENEOS BORELIN SERVICES" class="img-fluid rounded-circle mb-3 team-member-image">
+<!-- Our Team Section -->
+<section class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center section-title">Meet Our Team</h2>
+        <div class="row">
+            <div class="col-lg-4 d-flex align-items-stretch">
+                <div class="team-member text-center p-4 bg-white shadow rounded">
+                    <img src="PICTURE/ARNOLD.jpg" alt="Arnold - CEO" class="img-fluid rounded-circle mb-3 team-member-image">
                     <h3>Arnold</h3>
                     <p>CEO</p>
                 </div>
-                <div class="col-lg-4">
-                    <img src="PICTURE/member/w1.jpg" alt="Jane Smith - Project Manager at ETS ENEOS BORELIN SERVICES" class="img-fluid rounded-circle mb-3 team-member-image">
+            </div>
+            <div class="col-lg-4 d-flex align-items-stretch">
+                <div class="team-member text-center p-4 bg-white shadow rounded">
+                    <img src="PICTURE/member/w1.jpg" alt="Joseph - Project Manager" class="img-fluid rounded-circle mb-3 team-member-image">
                     <h3>Joseph</h3>
                     <p>Project Manager</p>
                 </div>
-                <div class="col-lg-4">
-                    <img src="PICTURE/member/w2.jpg" alt="Michael Brown - Lead Engineer at ETS ENEOS BORELIN SERVICES" class="img-fluid rounded-circle mb-3 team-member-image">
+            </div>
+            <div class="col-lg-4 d-flex align-items-stretch">
+                <div class="team-member text-center p-4 bg-white shadow rounded">
+                    <img src="PICTURE/member/w2.jpg" alt="Sam - Lead Engineer" class="img-fluid rounded-circle mb-3 team-member-image">
                     <h3>Sam</h3>
                     <p>Lead Engineer</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Testimonial Slider Section -->
     <section class="py-5">
